# cprior

./: CMakeLists.txt  main.cpp
R/: approx_example.R  sets_example.R
src/: CMakeLists.txt  main.cpp
src/encoder/: AttributeSet.h  AttributeTuple.cpp  AttributeTuple.h  DataGenerator.cpp  DataGenerator.h  DataSet.cpp  DataSet.h  Entry.cpp  Entry.h  Tuple.cpp  Tuple.h
src/math/: Gamma.cpp  Gamma.h  HpFloat.h  gamma_precompute_values.inc
src/multinomial/: AttributeTuple.cpp  AttributeTuple.h  CentralPredictive.cpp  CentralPredictive.h  Conditional.cpp  Conditional.h  Deterministic.h  Evaluator.cpp  Evaluator.h  InferenceEngine.h  InferenceNode.cpp  InferenceNode.h  MockOutcome.h  ModelNode.h  Variable.cpp  Variable.h
src/util/: ConstantSumRange.cpp  ConstantSumRange.h  Gamma.cpp  Gamma.h  HpFloat.h  gamma_precompute_values.inc
test/: CMakeLists.txt  dataset_test.cpp  inf_engine_test.cpp  model_node_test.cpp  tuple_test.cpp
test/data/: bin5.data  bin5.info  binary3.data  binary3.info  data.txt  info.txt  loan.csv  loan.info
test/mock/: MockOutcome.h  SmallOutcome.h
test/tools/: DecisionTreePredictor.cpp  DecisionTreePredictor.h  MockOutcome.h  SmallOutcome.h
